# llm-training

./: .gitignore  DEMO.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  demo_vector_search.py  docker-compose.yml  inference.py  main.py  mongo.py  pyproject.toml  run_scraper.py  test_improved_pipeline.py  test_rag.py  test_specific_company_k31330047f.py
chat/: README_CHAT.md  __init__.py  chat_cli.py  providers.py
datasets/: instruction_dataset.jsonl  test_instruction_dataset.jsonl  uk_companies_instruction_dataset.jsonl
pipelines/: instruction_dataset.py  open_corporate.py  open_procurement.py  qlora_finetuning.py  rag.py  uk_companies_download.py  uk_companies_parser.py
pipelines/datasets/: instruction_dataset.jsonl  uk_companies_instruction_dataset.jsonl
tests/: test_open_corporate.py
utils/: mongo.py  qdrant.py
