[project]
name = "llm-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<2",
    "requests>=2.32.4",
    "zenml>=0.84.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.3",
    "pymongo>=4.6.0",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-text-splitters>=0.0.1",
    "tiktoken>=0.5.0",
    "tqdm>=4.66.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "peft>=0.6.0",
    "trl>=0.7.0",
    "accelerate>=0.24.0",
    "scikit-learn>=1.3.0",
    "evaluate>=0.4.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "prompt-toolkit>=3.0.0",
    "torch==2.2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]
